@@ -157,11 +157,10 @@ void SharedBuffer::copyBufferAndClear(char* destination, unsigned bytesToCopy) c
         return;
 
     CFIndex bytesLeft = bytesToCopy;
-    Vector<RetainPtr<CFDataRef>>::const_iterator end = m_dataArray.end();
-    for (Vector<RetainPtr<CFDataRef>>::const_iterator it = m_dataArray.begin(); it != end; ++it) {
-        CFIndex dataLen = CFDataGetLength(it->get());
+    for (auto& cfData : m_dataArray) {
+        CFIndex dataLen = CFDataGetLength(cfData.get());
         ASSERT(bytesLeft >= dataLen);
-        memcpy(destination, CFDataGetBytePtr(it->get()), dataLen);
+        memcpy(destination, CFDataGetBytePtr(cfData.get()), dataLen);
         destination += dataLen;
         bytesLeft -= dataLen;
     }
@@ -170,14 +169,13 @@ void SharedBuffer::copyBufferAndClear(char* destination, unsigned bytesToCopy) c
 
 unsigned SharedBuffer::copySomeDataFromDataArray(const char*& someData, unsigned position) const
 {
-    Vector<RetainPtr<CFDataRef>>::const_iterator end = m_dataArray.end();
     unsigned totalOffset = 0;
-    for (Vector<RetainPtr<CFDataRef>>::const_iterator it = m_dataArray.begin(); it != end; ++it) {
-        unsigned dataLen = static_cast<unsigned>(CFDataGetLength(it->get()));
+    for (auto& cfData : m_dataArray) {
+        unsigned dataLen = static_cast<unsigned>(CFDataGetLength(cfData.get()));
         ASSERT(totalOffset <= position);
         unsigned localOffset = position - totalOffset;
         if (localOffset < dataLen) {
-            someData = reinterpret_cast<const char *>(CFDataGetBytePtr(it->get())) + localOffset;
+            someData = reinterpret_cast<const char *>(CFDataGetBytePtr(cfData.get())) + localOffset;
             return dataLen - localOffset;
         }
         totalOffset += dataLen;
@@ -205,7 +203,7 @@ bool SharedBuffer::maybeAppendDataArray(SharedBuffer* data)
 #if !ASSERT_DISABLED
     unsigned originalSize = size();
 #endif
-    for (auto cfData : data->m_dataArray)
+    for (auto& cfData : data->m_dataArray)
         append(cfData.get());
     ASSERT(size() == originalSize + data->size());
     return true;
